--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -20,9 +20,10 @@
     color: black;
     text-decoration: none;
     transition: 0.3s;
+    margin-left: 2rem;
 }
  .nav__items a:hover{
-    color: #17bf9e;
+    color: black;
  }
  .button Button{
     font-weight: 500;
@@ -34,7 +35,7 @@
  }
  
  .button Button:hover{
-    color: #17bf9e;
+    color: black;
     background-color: white;
  }
 
@@ -43,5 +44,6 @@
     color: black;
 
  }
+ 
 
 
