--- a/src/Component/HeroSection/heroscetion.css
+++ b/src/Component/HeroSection/heroscetion.css
@@ -3,3 +3,12 @@
     line-height: 55px;
     margin-top: 7rem;
 }
+.learning{
+    font-size: 3rem;
+    color: #3aaadb;
+}
+.hero__content h2{
+    font-size: 2.5rem;
+    font-weight: bold;
+    
+}
