--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -1,10 +1,10 @@
 .Container {
   display: flex;
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   flex-direction: column;
   width: 25%;
-  background: linear-gradient(to right, rgb(45, 130, 221), rgb(116, 167, 240));
+  background: linear-gradient(to right, #17bf9e, #2ad8b5);
   height: 100vh;
   /* justify-content: space-between; */
 }
