--- a/src/Component/Student Dashboard/StudentDashboard.css
+++ b/src/Component/Student Dashboard/StudentDashboard.css
@@ -57,24 +57,29 @@
   color: white;
   margin: 2rem;
   width: 100%;
-  height: 12rem;
+  height: 10rem;
   background-color: #17bf9e;
   border-radius: 55px;
-  align-items: center;
-  justify-content: center;
 }
 .text {
-  text-align: left;
-  padding: 3rem;
+  /* text-align: left; */
+  padding: 2.2rem;
 }
 
+.text h2 {
+  font-size: 1.8rem;
+}
+.text h3 {
+  font-size: 1.4rem;
+  font-weight: 400;
+}
 .student_pic {
-  margin: 1rem;
+  margin: 1.4rem;
   position: absolute;
   right: -3rem;
 }
 
 .student_pic img {
-  height: 14rem;
-  width: 14rem;
+  height: 11rem;
+  width: 11rem;
 }
