--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -3,9 +3,11 @@
 }
 .header{
     widows: 100%;
-    height: 80px;
+    height: 120px;
     line-height: 50px;
+  
 }
+
 .nav__list{
     margin: 0;
     padding: 0;
@@ -44,6 +46,14 @@
     color: black;
 
  }
- 
 
+  .header h2 {
+    color:black;
+  }
+  .main__heading{
+    text-decoration: none;
+  }
+ 
+  
+  
 
