--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -31,7 +31,7 @@
   color: black;
   text-decoration: none;
   transition: 0.3s;
-  background-color: white;
+  background-color: #17bf9e;
 }
 
 .button Button:hover {
