--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -28,7 +28,7 @@
 .button Button {
   font-weight: 500;
   font-size: 1.1rem;
-  color: black;
+  color: white;
   text-decoration: none;
   transition: 0.3s;
   background-color: #17bf9e;
