--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -4,10 +4,12 @@
 
 .follows span a {
   text-decoration: none;
+  font-size: 30px; 
 }
 
 .follows span {
   margin-right: 15px;
+  
 }
 
 .link__list .link__item {
@@ -16,8 +18,9 @@
 
 .link__list a {
   text-decoration: none;
-  color: #0a2b1e;
+  color: black;
   font-weight: 500;
+  font-size: 17px;
 }
 section,
 footer {
@@ -27,4 +30,26 @@ footer {
 .logo{
   height: 70px;
   width: 70px;
+}
+/* footer.css */
+
+.link__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align items to the start of the column */
+}
+
+.link__item {
+  padding: 0;
+}
+
+.link__item a {
+  color: black;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  margin-left: -17px;
+}
+
+.link__item a:hover {
+  color: #17bf9e; /* Green */
 }
