--- a/src/Component/StudentHome/StudentHome.css
+++ b/src/Component/StudentHome/StudentHome.css
@@ -1,15 +1,20 @@
 .Student-home {
-  height: 100vh;
+  max-width: 100vw;
   display: flex;
+  overflow: hidden;
 }
 
 .notnav {
-  width: 80%;
+  max-width: 71%;
+  /* width: 72%; */
+  height: 100vh;
+  margin-left: 28.5%;
 }
 .top {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 99%;
-  justify-content: space-evenly;
 }
 .top .search-bar button {
   position: absolute;
@@ -79,6 +84,7 @@
   display: flex;
   height: 40%;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
 .selection {
@@ -91,11 +97,16 @@
   padding: 20px;
   border-radius: 50%;
   align-items: center;
+  text-align: center;
 }
 
+.selection a {
+  text-decoration: none;
+  color: inherit;
+}
 .selection img {
-  height: 7rem;
-  width: 6rem;
+  width: 100px;
+  height: 100px;
   padding: 5px;
 }
 
@@ -103,6 +114,7 @@
   font-size: 15px;
   margin-block: auto;
   padding: 10px;
+  margin-top: 10px;
   margin: 4px;
 }
 
@@ -155,4 +167,11 @@
 .course-list .list {
   display: flex;
   width: 100%;
+}
+.tutorials {
+  height: 50%;
+  width: 50%;
+}
+.content {
+  margin-top: 20px;
 }
