--- a/src/Component/MainCoursePage/thankyou.css
+++ b/src/Component/MainCoursePage/thankyou.css
@@ -1,8 +1,37 @@
-.thank__you span i{
-font-size: 4rem;
-color: green;
+/* thankyou.css */
+.thank__you {
+    margin-top: -130px; /* Adjust margin as needed */
 }
-.thank__you h1{
-    font-size:  3.6rem;
-    font-family: var(--subtitle-font-name);
+
+.thank__you span i {
+    font-size: 4rem;
+    color: green;
+}
+
+.thank__you h1 {
+    font-size: 3.6rem;
+    color: #333; /* Change color as needed */
+    margin-bottom: 20px; /* Adjust margin as needed */
+}
+
+/* Add margin-right to create a gap between buttons */
+.btn.primary__btn {
+    background-color: #17bf9e; /* Button background color */
+    color: #fff !important; /* Button text color */
+    padding: 12px 24px; /* Adjust padding as needed */
+    font-size: 1.2rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-right: 20px; /* Add margin-right to create a gap */
+    font-weight: bold;
+    border: 2px solid transparent; /* Add border to the button */
+}
+
+.btn.primary__btn:last-child {
+    margin-right: 20px; /* Remove margin-right for the last button */
+}
+
+.btn.primary__btn:hover {
+    background-color: #0f9d82; /* Button background color on hover */
+    border-color: #0f9d82; /* Change border color on hover */
 }
