--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -5,9 +5,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 23vw; /* Adjust width as needed */
+  width: 18vw; /* Adjust width as needed */
   background: linear-gradient(to right, #17bf9e, #a8ffee);
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .icon {
@@ -27,16 +28,14 @@
 
 .profile-bar {
   background-color: white;
+  border-radius: 25px;
+  box-shadow: 12px 0px 15px 0px #13997e;
   padding: 10px;
   /* margin: 10px; */
   /* border-radius: 8px; */
   display: flex;
   align-items: center;
-  transition: all 0.8s;
-}
-.profile-bar:hover {
-  margin: 10px;
-  border-radius: 8px;
+  justify-content: safe;
 }
 .profile-bar img {
   height: 50px;
@@ -44,14 +43,24 @@
   margin-right: 10px;
   border-radius: 50%;
 }
+.profile-bar .username {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  min-width: 50%;
+}
 
-.profile-bar h3,
-.profile-bar h4 {
+.profile-bar h3 {
   margin: 0;
   font-size: 15px;
   font-weight: 500;
 }
-
+.profile-bar h4 {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+}
 .options {
   flex: 1;
 }
@@ -71,17 +80,11 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  border-radius: 12px;
+  border-radius: 22px;
   background-color: transparent; /* Set default background */
   color: #333;
   text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.options ul li a img {
-  height: 24px;
-  width: 24px;
-  margin-left: 80px; /* Adjust margin-right to shift icons to the right */
+  transition: all 0.3s ease;
 }
 
 .options ul li a p {
@@ -95,7 +98,12 @@
 /* here  */
 
 .options ul li a:hover {
-  background-color: #f0f0f0; /* Change background on hover */
+  background-color: white; /* Change background on hover */
+  border-radius: 25px;
+  width: 105%;
+  background-color: white;
+  padding-right: -2px;
+  margin-left: 20px;
 }
 
 .options ul li a p {
@@ -110,4 +118,5 @@
   background-color: white;
   padding-right: -2px;
   margin-left: 20px;
+  box-shadow: 5px 5px 12px 0px#008a88;
 }
