--- a/src/Component/MainCoursePage/CourseDetailsPage.css
+++ b/src/Component/MainCoursePage/CourseDetailsPage.css
@@ -1,6 +1,6 @@
 
 /* Course card */
-.course-card {
+.course-card1 {
     height: 480px; /* Increase the height of the course card */
     width: 800px !important;
     margin-left: -110px !important;
