--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -5,7 +5,6 @@
   widows: 100%;
   height: 120px;
   line-height: 50px;
- 
 }
 
 .nav__list {
@@ -26,7 +25,7 @@
 }
 .nav__items a:hover {
   color: #17bf9e;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .button Button {
   font-weight: 650;
@@ -35,7 +34,7 @@
   text-decoration: none;
   transition: 0.3s;
   background-color: #17bf9e;
-  margin-left: 20px; 
+  margin-left: 20px;
 }
 
 .button Button:hover {
