--- a/src/Component/HeroSection/heroscetion.css
+++ b/src/Component/HeroSection/heroscetion.css
@@ -30,7 +30,7 @@
 
 .hero_section {
   background: #17bf9e;
-  margin-top: -0.8rem;
+  margin-top: 1px;
 }
 .clipped-circle-bottom {
   position: absolute;
