--- a/src/Component/Our_popular_courses/courses.css
+++ b/src/Component/Our_popular_courses/courses.css
@@ -68,3 +68,19 @@
   transform: scale(1.05); /* Scale up button on hover */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); /* Add a subtle shadow on hover */
 }
+.see__all__btn{
+  border: 1.5px solid #17bf9e;
+  padding: calc(.375rem - 3px) 60px calc(.375rem - 3px) 12px;
+  background-color: #00000000;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 0.50px;
+  min-height: 42px;
+  color: #17bf9e;
+  border-radius: 10px;
+  transition: 70ms cubic-bezier(0,0,.38,.9),box-shadow 70ms cubic-bezier(0,0,.38,.9),border-color 70ms cubic-bezier(0,0,.38,.9),outline 70ms cubic-bezier(0,0,.38,.9);
+}
+.see__all__btn:hover {
+  background-color: #17bf9e;
+  color: #fff;
+}
