--- a/src/Pages/SignUp.css
+++ b/src/Pages/SignUp.css
@@ -14,6 +14,9 @@
     border-radius: 5px;
     background-color: #fff;
 }
+.signup-inputs label{
+    margin-left: -0.1px;
+}
 
 .signup-header h2 {
     text-align: center;
@@ -47,7 +50,8 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-    width: 200px;
+    width: 300px;
+    margin-left: -1px;
 }
 
 .signup-button, .google-signup-button {
@@ -73,7 +77,7 @@
 }
 
 .google-signup-button img {
-    width: 40px;
+    width: 30px;
     margin-right: 4px;
 }
 
@@ -97,7 +101,7 @@
     font-weight: bold;
     text-transform: uppercase;
 }
-//* Input and button styling */
+/* Input and button styling */
 .signup-inputs input {
     transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Transition */
     background-color: #f5f5f5; /* Light background color */
