--- a/src/Component/Header/header.css
+++ b/src/Component/Header/header.css
@@ -25,7 +25,7 @@
 }
 
 .nav__items {
-  margin-right: 30px;
+  margin-right: 8px;
 }
 
 .nav__items a {
@@ -73,13 +73,14 @@
   text-decoration: none;
   transition: 0.3s;
   background-color: #17bf9e;
-  margin-left: 20px; 
+  margin-left: 100px; 
   margin-top: -12px;
+  margin-right: -200px;
 }
 
 .button Button:hover {
   color: black;
-  background-color: white;
+  background-color: transparent;
 }
 
 .mobile__menu span i {
