--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
   width: 18vw; /* Adjust width as needed */
   background: linear-gradient(to right, #17bf9e, #a8ffee);
   overflow-y: auto;
