--- a/src/Component/StudentHome/StudentHome.css
+++ b/src/Component/StudentHome/StudentHome.css
@@ -2,12 +2,9 @@
   max-width: 100vw;
   display: flex;
   overflow: hidden;
+  justify-content: space-around;
 }
 
-.notnav {
-  max-width: 76%;
-  margin-left: 24vw;
-}
 .top {
   display: flex;
   align-items: center;
@@ -24,9 +21,6 @@
   background: white;
   margin-top: 2px;
   margin-right: 2px;
-}
-.top button :hover {
-  background-color: gray;
 }
 
 .top h4 {
