--- a/src/Component/Teacher/TeacherDashboard.css
+++ b/src/Component/Teacher/TeacherDashboard.css
@@ -53,3 +53,10 @@
   align-items: center;
   margin-top: 2rem;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
