--- a/src/Pages/Student/Student.css
+++ b/src/Pages/Student/Student.css
@@ -78,3 +78,26 @@
   top: 0;
   z-index: 100;
 }
+/* Framer Motions */
+.parent {
+  border: solid 2px;
+  border-color: #17bf9e;
+  width: 400px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all ease-in 0.2s;
+}
+
+.parent:hover {
+  width: 300px;
+  height: 140px;
+}
+
+.child {
+  width: 40px;
+  height: 40px;
+  background: white;
+  border-radius: 50%;
+}
